# space_bagarre

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/commons/: commons.h
include/engine/: game_engine.h  window.h
include/game/: coin_manager.h  game_contact_listener.h  game_object.h  game_timer_manager.h  input_manager.h  level.h  player_character.h  player_character_manager.h  rollback_manager.h
include/graphics/: renderer.h  resource_manager.h
include/network/: network_client.h  network_manager.h  packet.h
include/view/: imgui_menu.h
main/: main_local.cc  main_photon_test.cc  old_main.cc
src/engine/: game_engine.cc  window.cc
src/game/: coin_manager.cc  game_contact_listener.cc  game_object.cc  game_timer_manager.cc  input_manager.cc  level.cc  player_character.cc  player_character_manager.cc  rollback_manager.cc
src/graphics/: renderer.cc  resource_manager.cc
src/network/: network_client.cc  network_manager.cc  packet.cc
src/view/: imgui_menu.cc
